--- a/2-markdown.Rmd
+++ b/2-markdown.Rmd
@@ -89,6 +89,51 @@ gg_s + gg_n
 
 ```
 
+```{r all_conc, fig.height=5, fig.width=10}
+gg_n = 
+  all %>% 
+  mutate(date2 = as.Date(paste(Year,Month,Day, sep = "-"))) %>% 
+  ggplot(aes(x = date2, color = Watershed,shape=Watershed, size=Watershed))+
+  geom_point(aes(y = NO3_N), stroke=0.5)+
+  ylab(expression(bold("NO"[3]*"-N, mg L"^{-1})))+
+  xlab("")+
+  scale_shape_manual(values = c(1,19))+
+  scale_color_manual(values = c("#5d74a5", "#a45851"))+
+  scale_size_manual(values = c(2,2))+
+  geom_hline(yintercept = 0,size=0.3)+
+  geom_vline(xintercept = as.Date("1989-06-30"),linetype="dashed")+
+  geom_vline(xintercept = as.Date("2016-10-30"),linetype="dashed")+
+  annotate("text", label = "pre-treatment", x = as.Date("1988-01-01"), y = 1.8, angle = 90,size=4, hjust = "right")+
+  annotate("text", label = "recovery", x = as.Date("2017-09-15"), y = 1.8, angle = 90,size=4, hjust = "right")+ 
+  theme_kp()+
+  NULL
+
+gg_s = 
+  all %>% 
+  mutate(date2 = as.Date(paste(Year,Month,Day, sep = "-"))) %>% 
+  ggplot(aes(x = date2, color = Watershed,shape=Watershed, size=Watershed))+
+  geom_point(aes(y = SO4_S), stroke=0.5)+
+  #ylab("NO3-N conc, mg/L")+
+  ylab(expression(bold("SO"[4]*"-S, mg L"^{-1})))+
+  xlab("")+
+  scale_shape_manual(values = c(1,19))+
+  #scale_color_manual(values = PNWColors::pnw_palette("Sunset2",2))+
+  scale_color_manual(values = c("#5d74a5", "#a45851"))+
+  scale_size_manual(values = c(2,2))+
+  geom_hline(yintercept = 0,size=0.3)+
+  geom_vline(xintercept = as.Date("1989-06-30"),linetype="dashed")+
+  geom_vline(xintercept = as.Date("2016-10-30"),linetype="dashed")+
+  annotate("text", label = "pre-treatment", x = as.Date("1988-01-01"), y = 4, angle = 90,size=4, hjust = "right")+
+  annotate("text", label = "recovery", x = as.Date("2017-09-15"), y = 4, angle = 90,size=4, hjust = "right")+ 
+  theme_kp()+
+  NULL
+
+library(patchwork)
+
+gg_s + gg_n
+
+```
+
 
 
 # INTRA-ANNUAL CONCENTRATIONS 
